--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -78,6 +78,20 @@ include
 browserShared
 .
 inc
+%
+filter
+substitution
+%
+define
+toolbarHighlight
+rgba
+(
+255
+255
+255
+.
+3
+)
 #
 menubar
 -
@@ -109,34 +123,186 @@ flex
 ;
 }
 #
-personal
+navigator
 -
-bookmarks
+toolbox
 {
-min
 -
-height
+moz
+-
+appearance
 :
-29px
+none
+;
+background
+-
+color
+:
+transparent
+;
+border
+-
+top
+:
+none
+;
+border
+-
+bottom
+:
+1px
+solid
+ThreeDShadow
 ;
 }
 #
 navigator
 -
 toolbox
+>
+toolbar
+:
+not
+(
+:
+-
+moz
+-
+lwtheme
+)
+:
+not
+(
+#
+toolbar
+-
+menubar
+)
+{
+-
+moz
+-
+appearance
+:
+none
+;
+border
+-
+style
+:
+none
+;
+background
+-
+color
+:
+-
+moz
+-
+Dialog
+;
+}
+#
+navigator
+-
+toolbox
+>
+toolbar
+:
+not
+(
+#
+toolbar
+-
+menubar
+)
+:
+not
+(
+#
+TabsToolbar
+)
+{
+padding
+-
+top
+:
+1px
+;
+padding
+-
+bottom
+:
+1px
+;
+}
+#
+nav
+-
+bar
+:
+not
+(
+:
+-
+moz
+-
+lwtheme
+)
+#
+nav
+-
+bar
 [
-inFullscreen
+collapsed
 =
 "
 true
 "
 ]
++
+toolbar
+:
+not
+(
+:
+-
+moz
+-
+lwtheme
+)
+#
+nav
+-
+bar
+[
+collapsed
+=
+"
+true
+"
+]
++
+#
+customToolbars
++
+#
+PersonalToolbar
+:
+not
+(
+:
+-
+moz
+-
+lwtheme
+)
 #
 navigator
 -
 toolbox
 [
-inFullscreen
+tabsontop
 =
 "
 true
@@ -147,18 +313,228 @@ true
 nav
 -
 bar
+#
+navigator
+-
+toolbox
+[
+tabsontop
+=
+"
+true
+"
+]
+:
+not
+(
+[
+customizing
+]
+)
+>
+#
+nav
+-
+bar
+[
+collapsed
+=
+"
+true
+"
+]
++
+toolbar
+#
+navigator
+-
+toolbox
+[
+tabsontop
+=
+"
+true
+"
+]
+:
+not
+(
+[
+customizing
+]
+)
+>
+#
+nav
+-
+bar
+[
+collapsed
+=
+"
+true
+"
+]
++
+#
+customToolbars
++
+#
+PersonalToolbar
+{
+background
+-
+image
+:
+-
+moz
+-
+linear
+-
+gradient
+(
+toolbarHighlight
+rgba
+(
+255
+255
+255
+0
+)
+)
+;
+}
+#
+navigator
+-
+toolbox
+[
+tabsontop
+=
+"
+true
+"
+]
+>
+#
+nav
+-
+bar
+:
+not
+(
+:
+-
+moz
+-
+lwtheme
+)
+#
+navigator
+-
+toolbox
+[
+tabsontop
+=
+"
+true
+"
+]
+:
+not
+(
+[
+customizing
+]
+)
+>
+#
+nav
+-
+bar
+[
+collapsed
+=
+"
+true
+"
+]
++
+toolbar
+:
+not
+(
+:
+-
+moz
+-
+lwtheme
+)
+#
+navigator
+-
+toolbox
+[
+tabsontop
+=
+"
+true
+"
+]
+:
+not
+(
+[
+customizing
+]
+)
+>
+#
+nav
+-
+bar
+[
+collapsed
+=
+"
+true
+"
+]
++
+#
+customToolbars
++
+#
+PersonalToolbar
+:
+not
+(
+:
+-
+moz
+-
+lwtheme
+)
 {
 border
 -
 top
 :
-none
+1px
+solid
+ThreeDShadow
 ;
-padding
+}
+#
+personal
 -
-top
+bookmarks
+{
+min
+-
+height
 :
-0
+29px
 ;
 }
 #
@@ -214,48 +590,11 @@ true
 "
 ]
 )
-.
-tabbrowser
--
-tab
-:
--
-moz
--
-lwtheme
-:
-not
-(
-[
-selected
-=
-"
-true
-"
-]
-)
 {
 opacity
 :
 .
 85
-;
-}
-.
-tabbrowser
--
-tab
-:
--
-moz
--
-lwtheme
-{
-text
--
-shadow
-:
-none
 ;
 }
 toolbarbutton
@@ -9483,13 +9822,6 @@ png
 #
 TabsToolbar
 {
--
-moz
--
-appearance
-:
-none
-;
 min
 -
 height
@@ -9500,50 +9832,151 @@ padding
 :
 0
 ;
--
-moz
--
-box
--
-shadow
-:
-ThreeDShadow
-0
--
-1px
-inset
-;
 }
 #
 TabsToolbar
->
-toolbarbutton
+:
+not
+(
+:
+-
+moz
+-
+lwtheme
+)
 #
 TabsToolbar
->
-toolbarpaletteitem
->
-toolbarbutton
+[
+tabsontop
+=
+"
+false
+"
+]
+{
+background
+-
+image
+:
+-
+moz
+-
+linear
+-
+gradient
+(
+transparent
+transparent
+50
+%
+rgba
+(
+0
+0
+0
+.
+05
+)
+90
+%
+rgba
+(
+0
+0
+0
+.
+1
+)
+)
+;
+}
 #
-TabsToolbar
+tabbrowser
+-
+tabs
+[
+tabsontop
+=
+"
+true
+"
+]
 >
-#
-bookmarks
+.
+tabbrowser
 -
-menu
--
-button
--
-container
+arrowscrollbox
 >
+scrollbox
+:
+not
+(
+:
+-
+moz
+-
+lwtheme
+)
+{
+padding
+-
+bottom
+:
+1px
+;
+margin
+-
+bottom
+:
+-
+1px
+;
+position
+:
+relative
+;
+}
 #
-bookmarks
+tabbrowser
 -
-menu
+tabs
+[
+tabsontop
+=
+"
+true
+"
+]
+>
+.
+tabbrowser
 -
-button
+tab
+[
+selected
+=
+"
+true
+"
+]
+:
+not
+(
+:
+-
+moz
+-
+lwtheme
+)
 {
 margin
+-
+bottom
+:
+-
+1px
+;
+padding
 -
 bottom
 :
@@ -9554,24 +9987,204 @@ bottom
 tabbrowser
 -
 tab
+.
+tabs
+-
+newtab
+-
+button
 {
+position
+:
+static
+;
+-
+moz
+-
+appearance
+:
+none
+;
+background
+:
+-
+moz
+-
+linear
+-
+gradient
+(
+hsla
+(
+0
+0
+%
+100
+%
+.
+3
+)
+hsla
+(
+0
+0
+%
+50
+%
+.
+1
+)
+2px
+hsla
+(
+0
+0
+%
+37
+%
+.
+1
+)
+50
+%
+)
+;
+background
+-
+position
+:
+-
+5px
+-
+2px
+;
+background
+-
+repeat
+:
+no
+-
+repeat
+;
+background
+-
+size
+:
+200
+%
+;
+margin
+:
+0
+;
 padding
 :
 0
-2px
-2px
 ;
-margin
 -
-bottom
+moz
+-
+border
+-
+image
 :
-1px
+url
+(
+tabbrowser
+/
+tab
+.
+png
+)
+4
+5
+3
+6
+/
+4px
+5px
+3px
+6px
+;
+-
+moz
+-
+border
+-
+radius
+:
+10px
+8px
+0
+0
 ;
 min
 -
 height
 :
-25px
+27px
+;
+}
+.
+tabbrowser
+-
+tab
+:
+hover
+.
+tabs
+-
+newtab
+-
+button
+:
+hover
+{
+background
+-
+image
+:
+-
+moz
+-
+linear
+-
+gradient
+(
+hsla
+(
+0
+0
+%
+100
+%
+.
+6
+)
+hsla
+(
+0
+0
+%
+100
+%
+.
+4
+)
+2px
+hsla
+(
+0
+0
+%
+75
+%
+.
+4
+)
+50
+%
+)
 ;
 }
 .
@@ -9586,44 +10199,69 @@ true
 "
 ]
 {
-margin
+background
 -
-bottom
+image
 :
-0
-;
-padding
 -
-top
-:
+moz
+-
+linear
+-
+gradient
+(
+rgba
+(
+255
+255
+255
+.
+8
+)
+rgba
+(
+255
+255
+255
+.
+5
+)
 2px
-;
-padding
+toolbarHighlight
+20
+%
+)
 -
-bottom
-:
-3px
-;
-min
+moz
 -
-height
-:
-28px
+linear
+-
+gradient
+(
+-
+moz
+-
+dialog
+-
+moz
+-
+dialog
+)
 ;
 }
 .
 tabbrowser
 -
 tab
-[
-pinned
-]
+:
+-
+moz
+-
+lwtheme
 {
-min
--
-height
+color
 :
-20px
+inherit
 ;
 }
 .
@@ -9631,29 +10269,390 @@ tabbrowser
 -
 tab
 [
-pinned
+selected
+=
+"
+true
+"
 ]
-+
+:
+-
+moz
+-
+lwtheme
+{
+background
+-
+image
+:
+-
+moz
+-
+linear
+-
+gradient
+(
+rgba
+(
+255
+255
+255
+.
+8
+)
+rgba
+(
+255
+255
+255
+.
+5
+)
+2px
+toolbarHighlight
+20
+%
+)
+;
+}
 .
 tabbrowser
 -
 tab
+:
+-
+moz
+-
+lwtheme
+-
+brighttext
 :
 not
 (
 [
-pinned
+selected
+=
+"
+true
+"
 ]
 )
-{
+.
+tabs
+-
+newtab
+-
+button
+:
 -
 moz
 -
-margin
+lwtheme
 -
-start
+brighttext
+{
+background
+-
+image
 :
+-
+moz
+-
+linear
+-
+gradient
+(
+hsla
+(
 0
+0
+%
+60
+%
+.
+6
+)
+hsla
+(
+0
+0
+%
+40
+%
+.
+6
+)
+2px
+hsla
+(
+0
+0
+%
+30
+%
+.
+6
+)
+50
+%
+)
+;
+}
+.
+tabbrowser
+-
+tab
+:
+-
+moz
+-
+lwtheme
+-
+brighttext
+:
+not
+(
+[
+selected
+=
+"
+true
+"
+]
+)
+:
+hover
+.
+tabs
+-
+newtab
+-
+button
+:
+-
+moz
+-
+lwtheme
+-
+brighttext
+:
+hover
+{
+background
+-
+image
+:
+-
+moz
+-
+linear
+-
+gradient
+(
+hsla
+(
+0
+0
+%
+80
+%
+.
+6
+)
+hsla
+(
+0
+0
+%
+60
+%
+.
+6
+)
+2px
+hsla
+(
+0
+0
+%
+45
+%
+.
+6
+)
+50
+%
+)
+;
+}
+.
+tabbrowser
+-
+tab
+:
+-
+moz
+-
+lwtheme
+-
+darktext
+:
+not
+(
+[
+selected
+=
+"
+true
+"
+]
+)
+.
+tabs
+-
+newtab
+-
+button
+:
+-
+moz
+-
+lwtheme
+-
+darktext
+{
+background
+-
+image
+:
+-
+moz
+-
+linear
+-
+gradient
+(
+hsla
+(
+0
+0
+%
+100
+%
+.
+5
+)
+hsla
+(
+0
+0
+%
+60
+%
+.
+5
+)
+2px
+hsla
+(
+0
+0
+%
+45
+%
+.
+5
+)
+50
+%
+)
+;
+}
+.
+tabbrowser
+-
+tab
+:
+-
+moz
+-
+lwtheme
+-
+darktext
+:
+not
+(
+[
+selected
+=
+"
+true
+"
+]
+)
+:
+hover
+.
+tabs
+-
+newtab
+-
+button
+:
+-
+moz
+-
+lwtheme
+-
+darktext
+:
+hover
+{
+background
+-
+image
+:
+-
+moz
+-
+linear
+-
+gradient
+(
+hsla
+(
+0
+0
+%
+100
+%
+.
+5
+)
+hsla
+(
+0
+0
+%
+80
+%
+.
+5
+)
+2px
+hsla
+(
+0
+0
+%
+60
+%
+.
+5
+)
+50
+%
+)
 ;
 }
 .
@@ -9678,17 +10677,17 @@ true
 ]
 )
 {
+background
+-
+image
+:
 -
 moz
 -
-box
+linear
 -
-shadow
-:
-0
-0
-0
-1em
+gradient
+(
 rgba
 (
 255
@@ -9697,7 +10696,101 @@ rgba
 .
 5
 )
-inset
+rgba
+(
+255
+0
+0
+.
+5
+)
+)
+!
+important
+;
+}
+.
+tabbrowser
+-
+tab
+[
+pinned
+]
+{
+min
+-
+height
+:
+20px
+;
+}
+.
+tabbrowser
+-
+tab
+>
+.
+tab
+-
+text
+{
+border
+:
+1px
+dotted
+transparent
+;
+margin
+:
+-
+1px
+!
+important
+;
+}
+.
+tabbrowser
+-
+tab
+:
+focus
+>
+.
+tab
+-
+text
+{
+border
+:
+1px
+dotted
+-
+moz
+-
+DialogText
+;
+}
+.
+tabbrowser
+-
+tab
+[
+pinned
+]
+:
+focus
+>
+.
+tab
+-
+icon
+-
+image
+{
+outline
+:
+1px
+dotted
 ;
 }
 .
@@ -9720,18 +10813,9 @@ moz
 -
 margin
 -
-start
-:
-1px
-;
--
-moz
--
-margin
--
 end
 :
-4px
+3px
 ;
 list
 -
@@ -9790,6 +10874,17 @@ tab
 icon
 -
 image
+.
+tabs
+-
+newtab
+-
+button
+>
+.
+toolbarbutton
+-
+icon
 {
 -
 moz
@@ -10500,22 +11595,6 @@ normal
 ;
 }
 .
-tab
--
-close
--
-button
-:
-focus
-{
-outline
-:
-none
-!
-important
-;
-}
-.
 tabs
 -
 newtab
@@ -10585,6 +11664,35 @@ region
 :
 auto
 ;
+}
+#
+TabsToolbar
+>
+#
+new
+-
+tab
+-
+button
+#
+TabsToolbar
+>
+#
+wrapper
+-
+new
+-
+tab
+-
+button
+>
+#
+new
+-
+tab
+-
+button
+{
 margin
 -
 bottom
@@ -10592,29 +11700,6 @@ bottom
 1px
 ;
 }
-.
-tabs
--
-newtab
--
-button
-{
-width
-:
-32px
-;
-}
-.
-tabs
--
-newtab
--
-button
->
-.
-toolbarbutton
--
-icon
 #
 TabsToolbar
 >
